--- a/src/app/features/users/components/profile/user-profile.component.html
+++ b/src/app/features/users/components/profile/user-profile.component.html
@@ -166,6 +166,13 @@
                 Please confirm your password
               </div>
             }
+
+            @if (passwordForm.get('confirmPassword')?.touched && passwordForm.errors?.['passwordMismatch']) {
+              <div class="error-message">
+                <tui-icon icon="@tui.info" />
+                Passwords do not match
+              </div>
+            }
           </div>
 
           @if (passwordError()) {
