--- a/src/app/features/settings/components/tabs/roles-tab.component.less
+++ b/src/app/features/settings/components/tabs/roles-tab.component.less
@@ -157,4 +157,21 @@
     justify-content: center;
     flex: 1;
   }
+
+  &__dialog-title {
+    margin: 0 0 1rem 0;
+    font-size: 1rem;
+    line-height: 1.5;
+  }
+
+  &__role-select {
+    width: 100%;
+    margin-bottom: 1.5rem;
+  }
+
+  &__dialog-actions {
+    display: flex;
+    gap: 0.5rem;
+    justify-content: flex-end;
+  }
 }
