fix(settings): close dialog after adding role to user
Call observer.complete() after observer.next() to close dialog and reset
userToAddRole and selectedRoleToAdd signals when dialog is dismissed.

--- a/src/app/features/settings/components/tabs/roles-tab.component.html
+++ b/src/app/features/settings/components/tabs/roles-tab.component.html
@@ -236,7 +236,7 @@
       tuiButton
       appearance="primary"
       [disabled]="!selectedRoleToAdd()"
-      (click)="observer.next(selectedRoleToAdd())">
+      (click)="observer.next(selectedRoleToAdd()); observer.complete()">
       Add Role
     </button>
   </div>
