fix(settings): add name attributes to ngModel inputs in role dialog
Fix Angular NG01352 error by adding required name attributes to inputs
and textarea within form tags.

--- a/src/app/features/settings/components/tabs/roles-tab.component.html
+++ b/src/app/features/settings/components/tabs/roles-tab.component.html
@@ -251,6 +251,7 @@
           placeholder="Enter role name"
           tuiTextfield
           [(ngModel)]="roleName"
+          name="roleName"
           required />
       </tui-textfield>
     </div>
@@ -261,6 +262,7 @@
           placeholder="Enter description"
           tuiTextfield
           [(ngModel)]="roleDescription"
+          name="roleDescription"
           rows="3"></textarea>
       </tui-textfield>
     </div>
