--- a/src/app/features/settings/components/tabs/users-tab.component.less
+++ b/src/app/features/settings/components/tabs/users-tab.component.less
@@ -26,6 +26,11 @@
     flex-shrink: 0;
   }
 
+  &__filter-select {
+    flex-shrink: 0;
+    min-width: 120px;
+  }
+
   &__add-button {
     white-space: nowrap;
     flex-shrink: 0;
